--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,6 @@
             android:layout_marginBottom="8dp"
             android:background="@drawable/start_button"
             android:enabled="false"
-            android:fontFamily="@font/josefin_sans"
             android:text="@string/start"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,7 +40,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:checked="true"
-            android:fontFamily="@font/josefin_sans"
+            android:fontFamily="@font/josefin_sans_light"
             android:text="@string/random"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -86,15 +85,15 @@
             android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
             android:background="@drawable/white_background"
             android:ems="10"
-            android:fontFamily="@font/josefin_sans"
+            android:fontFamily="@font/josefin_sans_light"
             android:hint="@string/insert_player"
             android:imeOptions="actionDone"
             android:inputType="textPersonName|textCapSentences"
+            android:maxLength="20"
             android:padding="15dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
             android:textSize="24sp"
-            android:maxLength="20"
             app:layout_constraintEnd_toStartOf="@+id/addButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
