--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -19,7 +19,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:fontFamily="@font/josefin_sans"
+        android:fontFamily="@font/josefin_sans_light"
         android:text="@string/rules_content"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,7 +39,7 @@
         android:id="@+id/linkTV"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/josefin_sans"
+        android:fontFamily="@font/josefin_sans_light"
         android:gravity="center"
         android:text="@string/source"
         android:textColor="@color/black"
