--- a/app/src/main/res/layout/scorecard_tosses.xml
+++ b/app/src/main/res/layout/scorecard_tosses.xml
@@ -7,7 +7,7 @@
         android:id="@+id/tossesNumberTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="@font/josefin_sans"
+        android:fontFamily="@font/josefin_sans_light"
         android:textSize="16sp" />
 
     <TextView
@@ -15,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:fontFamily="@font/josefin_sans"
+        android:fontFamily="@font/josefin_sans_light"
         android:textSize="16sp" />
 
     <TextView
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:fontFamily="@font/josefin_sans"
+        android:fontFamily="@font/josefin_sans_light"
         android:textSize="16sp" />
 
 </TableRow>
