--- a/app/src/main/res/layout/scorecard_tosses.xml
+++ b/app/src/main/res/layout/scorecard_tosses.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/josefin_sans_light"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
@@ -16,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/josefin_sans_light"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
     <TextView
@@ -24,6 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:fontFamily="@font/josefin_sans_light"
+        android:textColor="@color/black"
         android:textSize="16sp" />
 
 </TableRow>
