--- a/app/src/main/res/layout/activity_player_stats.xml
+++ b/app/src/main/res/layout/activity_player_stats.xml
@@ -56,6 +56,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text="@string/games"
+                        android:textColor="@color/black"
                         android:textSize="20sp" />
 
                     <TextView
@@ -63,7 +64,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
-                        android:layout_marginLeft="8dp"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:textSize="20sp" />
 
@@ -81,6 +82,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text="@string/wins"
                         android:textSize="20sp" />
@@ -90,7 +92,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
-
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:textSize="20sp" />
                 </TableRow>
@@ -103,6 +105,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text="@string/tosses"
                         android:textSize="20sp" />
@@ -111,6 +114,7 @@
                         android:id="@+id/stats_TossesTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:layout_marginLeft="8dp"
                         android:fontFamily="@font/josefin_sans_light"
 
@@ -126,6 +130,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text="@string/points"
+                        android:textColor="@color/black"
                         android:textSize="20sp" />
 
                     <TextView
@@ -133,6 +138,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text=""
                         android:textSize="20sp" />
@@ -146,6 +152,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans_light"
+                        android:textColor="@color/black"
                         android:text="@string/points_per_toss"
                         android:textSize="20sp" />
 
@@ -154,6 +161,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:textSize="20sp" />
                 </TableRow>
@@ -167,6 +175,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans_light"
+                        android:textColor="@color/black"
                         android:text="@string/hits_percentage"
                         android:textSize="20sp" />
 
@@ -176,6 +185,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
                         android:fontFamily="@font/josefin_sans_light"
+                        android:textColor="@color/black"
                         android:text=""
                         android:textSize="20sp" />
                 </TableRow>
@@ -187,6 +197,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text="@string/eliminations"
                         android:textSize="20sp" />
@@ -196,6 +207,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text=""
                         android:textSize="20sp" />
@@ -209,6 +221,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans_light"
+                        android:textColor="@color/black"
                         android:text="@string/excesses"
                         android:textSize="20sp" />
 
@@ -217,6 +230,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text=""
                         android:textSize="20sp" />
@@ -230,6 +244,7 @@
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text="@string/winning_chances"
+                        android:textColor="@color/black"
                         android:textSize="20sp" />
 
                     <TextView
@@ -237,6 +252,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="8dp"
+                        android:textColor="@color/black"
                         android:fontFamily="@font/josefin_sans_light"
                         android:text=""
                         android:textSize="20sp" />
