--- a/app/src/main/res/layout/name_change_view.xml
+++ b/app/src/main/res/layout/name_change_view.xml
@@ -15,7 +15,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textVisiblePassword|textNoSuggestions"
-        android:maxLength="20" />
+        android:maxLength="20"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
 
 
 </com.google.android.material.textfield.TextInputLayout>
