--- a/app/src/main/res/layout/activity_scorecard.xml
+++ b/app/src/main/res/layout/activity_scorecard.xml
@@ -156,6 +156,7 @@
         android:background="@drawable/start_button"
         android:padding="10dp"
         android:text="@string/show_all_time_stats"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
