--- a/app/src/main/res/layout/player_switch_layout.xml
+++ b/app/src/main/res/layout/player_switch_layout.xml
@@ -4,4 +4,5 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="0dp"
+    android:textColor="@color/black"
     android:minEms="7"/>
