--- a/app/src/main/res/layout/spectate_view.xml
+++ b/app/src/main/res/layout/spectate_view.xml
@@ -16,7 +16,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textVisiblePassword|textNoSuggestions"
-        android:maxLength="4" />
+        android:maxLength="4"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black" />
 
 
 </com.google.android.material.textfield.TextInputLayout>
