--- a/app/src/main/res/layout/vertical_player_view.xml
+++ b/app/src/main/res/layout/vertical_player_view.xml
@@ -39,6 +39,7 @@
             android:fontFamily="@font/crimson_text_bold"
             android:gravity="center"
             android:minEms="2"
+            android:textColor="@color/black"
             android:textSize="28sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +56,7 @@
             android:paddingBottom="2dp"
             android:scrollbars="none"
             android:singleLine="true"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/totalPointsTextView"
             app:layout_constraintStart_toEndOf="@+id/playerNameTextView"
